feat: 更新start.sh脚本